--- a/templates/main.twig
+++ b/templates/main.twig
@@ -119,9 +119,8 @@ ddev config</code></pre>
       Take a look at the <a href="https://www.drupal.org/contributor-tasks" title="Contributor Tasks">Contributor tasks</a>. <strong>Work with a another contributor to find a task</strong>.
     </p>
     <h2 id="references"><i class="fa-solid fa-book"></i> References</h2>
-    <h3>General Core Contribution</h3>
+    <h3>Standards</h3>
     <ul>
-
         <li><a href="https://drupal.org/coding-standards" class="ext">Drupal coding standards</a></li>
         <li><a href="https://drupal.org/node/1354" class="ext">API documentation standards</a></li>
     </ul>
@@ -129,7 +128,7 @@ ddev config</code></pre>
     <ul>
         <li><a href="https://www.drupal.org/tools" class="ext">"Official" Drupal Contribution Tools</a></li>
         <li><a href="https://www.sublimetext.com/download" class="ext">SublimeText</a> (code editor) and
-            <a title="ST3 configuration instructions" href="https://realityloop.com/blog/2012/08/09/drupal-development-using-sublime-text-2-5-steps" class="ext">configuration instructions</a></li>
+            <a title="SublimeText configuration instructions" href="https://www.drupal.org/docs/develop/development-tools/configuring-sublime-text" class="ext">configuration instructions</a></li>
 
     </ul>
     <p><strong>Other initiatives</strong></p>
