--- a/templates/base.twig
+++ b/templates/base.twig
@@ -7,16 +7,15 @@
 
     <title>Drupal Development &bull; Joël Pittet</title>
 
-    <!-- Bootstrap CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=PT+Serif:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="//fonts.googleapis.com/css?family=PT+Serif%3A400%2C400italic" rel="stylesheet" type="text/css" />
-    <link href="/css/main.css" rel="stylesheet" />
+    <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=PT+Serif:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet" />
+    <link href="css/bootstrap.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
 
-    <script defer src="/assets/fontawesome/js/solid.js"></script>
-    <script defer src="/assets/fontawesome/js/fontawesome.js"></script>
+    <script defer src="assets/fontawesome/js/solid.js"></script>
+    <script defer src="assets/fontawesome/js/fontawesome.js"></script>
 </head>
 <body>
 
