--- a/templates/base.twig
+++ b/templates/base.twig
@@ -34,7 +34,14 @@
     </div>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="js/popperjs/popper.js"></script>
+    <script src="js/bootstrap/dom/event-handler.js"></script>
+    <script src="js/bootstrap/dom/selector-engine.js"></script>
+    <script src="js/bootstrap/dom/data.js"></script>
+    <script src="js/bootstrap/dom/manipulator.js"></script>
+    <script src="js/bootstrap/base-component.js"></script>
+    <script src="js/bootstrap/collapse.js"></script>
+{#    <script src="js/bootstrap/tooltip.js"></script>#}
+{#    <script src="js/bootstrap/popover.js"></script>#}
 </body>
 </html>
