update DrupalPod link as suggested by irinaz and get PHP version down to my production version

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -92,7 +92,7 @@ ddev config</code></pre>
         <summary>Cloud Development Environment: DrupalPod</summary>
         <div class="details__content">This is great if you don't want to touch your machine(or can't) yet still want to
             code.
-            <a href="https://github.com/shaal/DrupalPod">DrupalPod</a></div>
+            <a href="https://www.drupal.org/project/drupalpod">DrupalPod</a></div>
     </details>
 
     <details>
