--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
 body {
   color: #333;
-  font: 14px/1.5 "PT Serif", Georgia, serif;
+  font: 17px/1.5 "PT Serif", Georgia, serif;
   background-color: #fff;
   padding: 0 0.25rem 1rem;
 }
@@ -8,13 +8,13 @@ body {
 @media (min-width: 40em) {
   body {
     padding: 0 2rem 2rem;
-    font-size: 16px;
+    font-size: 18px;
   }
 }
 @media (min-width: 80em) {
   body {
     padding: 0 5rem 2rem;
-    font-size: 20px;
+    font-size: 22px;
   }
 }
 .help {
@@ -103,28 +103,33 @@ details > .details__content {
 }
 
 h1,
+h2 {
+  text-transform: uppercase;
+}
+
+h1,
 h2,
 h3 {
   font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
-  text-transform: uppercase;
   font-weight: 700;
 }
 
 h1 {
   color: #ccc;
-  font-size: 3em;
+  font-size: 3rem;
   line-height: 1;
 }
 
 h2 {
   color: #4d4d4d;
   font-weight: 700;
-  font-size: 2em;
+  font-size: 2rem;
   line-height: 1.3em;
 }
 
 h3 {
-  color: #b3b3b3;
+  color: #666;
+  font-size: 1.6rem;
   font-weight: 700;
 }
 
