--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,28 +1,32 @@
 
 h1,
+h2 {
+  text-transform: uppercase;
+}
+
+h1,
 h2,
 h3 {
   font-family: 'Montserrat', "Helvetica Neue", Arial, sans-serif;
-  text-transform: uppercase;
   font-weight: 700;
 }
 
 h1 {
   color: #ccc;
-  font-size: 3em;
+  font-size: 3rem;
   line-height: 1;
 }
 
 h2 {
   color: #4d4d4d;
   font-weight: 700;
-  font-size: 2em;
+  font-size: 2rem;
   line-height: 1.3em;
 }
 
-
 h3 {
-  color: #b3b3b3;
+  color: #666;
+  font-size: 1.6rem;
   font-weight: 700;
 }
 
