Add some core initiative updates, and remove .ext class and title attributes on links

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -38,10 +38,10 @@
 
     <p class="text-warning"> <em>Please have these steps' setup before the contribution weekend!</em></p>
 
-    <h3>1. Create an account on <a href="https://drupal.org/user/register" class="ext">Drupal.org</a></h3>
-    <h3>2. Join the conversation Drupal's <a href="https://www.drupal.org/slack" class="ext">Slack</a> groups</h3>
+    <h3>1. Create an account on <a href="https://drupal.org/user/register">Drupal.org</a></h3>
+    <h3>2. Join the conversation Drupal's <a href="https://www.drupal.org/slack">Slack</a> groups</h3>
 
-    <p>Add <a href="http://drupalslack.herokuapp.com">Drupal Slack</a> and <a href="https://vandug.herokuapp.com/">Van DUG</a> groups.
+    <p>Add <a href="https://drupalslack.herokuapp.com">Drupal Slack</a> and <a href="https://vandug.herokuapp.com/">Van DUG</a> groups.
 
     <p>Join the
         <code>#drupal-pnw</code> and
@@ -54,12 +54,12 @@
         <div class="details__content">
             <ol>
                 <li>
-                    <strong>Install <a href="https://git-scm.com/downloads" class="ext">git</a></strong>.
+                    <strong>Install <a href="https://git-scm.com/downloads">git</a></strong>.
                     <button type="button" class="btn btn-link help" data-bs-toggle="collapse" data-bs-target="#git" aria-expanded="false" aria-controls="git">
                         <i class="fa-solid fa-circle-question fa-xl"></i>
                     </button>
                     <div id="git" class="collapse">
-                        <p><a title="Free online git reference book" href="https://git-scm.com/book" class="ext">free online reference book</a></p>
+                        <p><a href="https://git-scm.com/book">free online reference book</a></p>
                     </div>
                 </li>
                 <li>
@@ -69,13 +69,12 @@
                         </button>
                     </p>
                     <div id="dev-stack" class="collapse">
-                        <p>There are plenty more local development environments to choose from in the guide: <a href="https://www.drupal.org/docs/develop/local-server-setup" class="ext">Local server setup</a>. </p>
+                        <p>There are plenty more local development environments to choose from in the guide: <a href="https://www.drupal.org/docs/develop/local-server-setup">Local server setup</a>. </p>
                     </div>
                 </li>
                 <li>
-                    <p><strong>Create a local D9 website:</strong>
-                        <strong>Clone <a href="https://www.drupal.org/project/drupal/git-instructions" title="Drupal 9.x.x | drupal.org">Drupal 9</a> with git:</strong>
-
+                    <p><strong>Create a local Drupal website:</strong>
+                        <strong>Clone <a href="https://www.drupal.org/project/drupal/git-instructions">Drupal 9</a> with git:</strong>
                     </p>
                     <pre><code>mkdir ~/Sites/d9
 cd ~/Sites/d9
@@ -124,24 +123,25 @@ ddev config</code></pre>
 
     <em class="text-muted">or</em>
     <p class="lead">
-      Take a look at the <a href="https://www.drupal.org/contributor-tasks" title="Contributor Tasks">Contributor tasks</a>. <strong>Work with a another contributor to find a task</strong>.
+      Take a look at the <a href="https://www.drupal.org/contributor-tasks">Contributor tasks</a>. <strong>Work with a another contributor to find a task</strong>.
     </p>
     <h2 id="references"><i class="fa-solid fa-book"></i> References</h2>
     <h3>Standards</h3>
     <ul>
-        <li><a href="https://drupal.org/coding-standards" class="ext">Drupal coding standards</a></li>
-        <li><a href="https://drupal.org/node/1354" class="ext">API documentation standards</a></li>
+        <li><a href="https://drupal.org/coding-standards">Drupal coding standards</a></li>
+        <li><a href="https://drupal.org/node/1354">API documentation standards</a></li>
     </ul>
     <h3>Additional tooling-up</h3>
     <ul>
-        <li><a href="https://www.drupal.org/tools" class="ext">"Official" Drupal Contribution Tools</a></li>
-        <li><a href="https://www.sublimetext.com/download" class="ext">SublimeText</a> (code editor) and
-            <a title="SublimeText configuration instructions" href="https://www.drupal.org/docs/develop/development-tools/configuring-sublime-text" class="ext">configuration instructions</a></li>
+        <li><a href="https://www.drupal.org/tools">"Official" Drupal Contribution Tools</a></li>
+        <li><a href="https://www.sublimetext.com/download">SublimeText</a> (code editor) and
+            <a href="https://www.drupal.org/docs/develop/development-tools/configuring-sublime-text">configuration instructions</a></li>
 
     </ul>
-    <p><strong>Other initiatives</strong></p>
+    <p><strong>Core</strong></p>
     <ul>
-        <li><a href="https://groups.drupal.org/drupal-initiatives" title="Drupal 9 Initiatives | Drupal Groups">Initiatives Discussion  - Drupal Groups</a></li>
+        <li><a href="https://www.drupal.org/about/core/strategic-initiatives">Strategic Initiatives</a></li>
+        <li><a href="https://www.drupal.org/about/core/policies">Core Development Policies</a></li>
     </ul>
 {% endblock %}
 
