add core roadmap link

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -142,6 +142,7 @@ ddev config</code></pre>
     <ul>
         <li><a href="https://www.drupal.org/about/core/strategic-initiatives">Strategic Initiatives</a></li>
         <li><a href="https://www.drupal.org/about/core/policies">Core Development Policies</a></li>
+        <li><a href="https://www.drupal.org/core/roadmap">Core Roadmap</a></li>
     </ul>
 {% endblock %}
 
