Add a couple more contribution reference links

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -41,14 +41,11 @@
     <h3>1. Create an account on <a href="https://drupal.org/user/register">Drupal.org</a></h3>
     <h3>2. Join the conversation Drupal's <a href="https://www.drupal.org/slack">Slack</a> groups</h3>
 
-    <p>Add <a href="https://drupalslack.herokuapp.com">Drupal Slack</a> and <a href="https://vandug.herokuapp.com/">Van DUG</a> groups.
+    <p>Add <a href="https://www.drupal.org/slack">Drupal Slack</a> and <a href="https://vandug.herokuapp.com/">Van DUG</a> groups.
 
-    <p>Join the
-        <code>#drupal-pnw</code> and
-        <code>#drupal-contribute</code> slack channels.
-    </p>
+    <p>Join the <code>#contribute</code> slack channels.</p>
+
     <h3>3. <i class="fa-solid fa-hiking"></i> Choose your own adventure:</h3>
-
     <details>
         <summary>Local Development Environment: DDEV</summary>
         <div class="details__content">
@@ -80,8 +77,6 @@
 cd ~/Sites/d9
 git clone https://git.drupalcode.org/project/drupal.git web
 ddev config</code></pre>
-
-
                 </li>
                 <li><strong>Install Drupal and <em>you're ready to patch!</em></strong>
 
@@ -115,22 +110,29 @@ ddev config</code></pre>
             drupal.org.</div>
     </details>
 
-
-
     <h2 id="agenda"><i class="fa-solid fa-cloud-sun"></i> During the day</h2>
 
         <p class="lead">Work with a group on porting and testing a contributed module to Drupal 9 or 10</p>
 
     <em class="text-muted">or</em>
+
     <p class="lead">
-      Take a look at the <a href="https://www.drupal.org/contributor-tasks">Contributor tasks</a>. <strong>Work with a another contributor to find a task</strong>.
+      Take a look at the <a href="https://www.drupal.org/contributor-tasks">Contributor tasks</a>. <strong>Work with another contributor to find a task</strong>.
     </p>
     <h2 id="references"><i class="fa-solid fa-book"></i> References</h2>
+
+    <h3>Contributing</h3>
+    <ul>
+        <li><a href="https://www.drupal.org/community/contributor-guide">Contributor Guide</a></li>
+        <li><a href="https://www.drupal.org/project/issues/search/drupal">Core Issue Queue</a></li>
+    </ul>
+
     <h3>Standards</h3>
     <ul>
         <li><a href="https://drupal.org/coding-standards">Drupal coding standards</a></li>
         <li><a href="https://drupal.org/node/1354">API documentation standards</a></li>
     </ul>
+
     <h3>Additional tooling-up</h3>
     <ul>
         <li><a href="https://www.drupal.org/tools">"Official" Drupal Contribution Tools</a></li>
