--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,1 +1,8 @@
 $primary: #0678be;
+
+$font-size-base: 1.5rem;
+
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/mixins";
+@import "../node_modules/bootstrap/scss/utilities";
