--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,7 @@
-@use "variables";
+@import "variables";
 
 body {
   color: #333;
-  font: 17px/1.5 "PT Serif", Georgia, serif;
   background-color: #fff;
   padding: 0 0.25rem 1rem;
 }
@@ -10,13 +9,11 @@ body {
 @media (min-width: 40em) {
   body {
     padding: 0 2rem 2rem;
-    font-size: 18px;
   }
 }
 @media (min-width: 80em) {
   body {
     padding: 0 5rem 2rem;
-    font-size: 22px;
   }
 }
 
