--- a/templates/main.twig
+++ b/templates/main.twig
@@ -119,6 +119,11 @@ ddev config</code></pre>
     <p class="lead">
       Take a look at the <a href="https://www.drupal.org/contributor-tasks">Contributor tasks</a>. <strong>Work with another contributor to find a task</strong>.
     </p>
+
+    <p>Depending on interest/audience, we will gladly show offer to do a demo/training session. And breakout rooms if need be, for example, to tackle
+        <a href="https://www.drupal.org/project/issues/search/feeds">feeds issues</a> or <a href="https://www.drupal.org/project/issues/search/basic">basic issues</a>.
+    </p>
+
     <h2 id="references"><i class="fa-solid fa-book"></i> References</h2>
 
     <h3>Contributing</h3>
