--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,9 @@
+@import "../variables";
+
+body {
+  font-family:  "PT Serif", Georgia, serif;
+  @include font-size(1.5rem);
+}
 
 h1,
 h2 {
@@ -13,20 +19,20 @@ h3 {
 
 h1 {
   color: #ccc;
-  font-size: 3rem;
+  @include font-size(3rem);
   line-height: 1;
 }
 
 h2 {
   color: #4d4d4d;
   font-weight: 700;
-  font-size: 2rem;
+  @include font-size(2rem);
   line-height: 1.3em;
 }
 
 h3 {
   color: #666;
-  font-size: 1.6rem;
+  @include font-size(1.6rem);
   font-weight: 700;
 }
 
@@ -41,6 +47,7 @@ h4 {
   font-size: 1.4em;
   line-height: 1.3em;
 }
+
 h6 {
   font-weight: bold;
   font-size: 18px;
@@ -56,6 +63,7 @@ p {
   margin: 0.3em 0 0.6em 0;
   line-height: 1.6em;
 }
+
 
 blockquote {
   background: #eee;
