fix core heading

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -145,7 +145,8 @@ ddev config</code></pre>
             <a href="https://www.drupal.org/docs/develop/development-tools/configuring-sublime-text">configuration instructions</a></li>
 
     </ul>
-    <p><strong>Core</strong></p>
+
+    <h3>Core</h3>
     <ul>
         <li><a href="https://www.drupal.org/about/core/strategic-initiatives">Strategic Initiatives</a></li>
         <li><a href="https://www.drupal.org/about/core/policies">Core Development Policies</a></li>
