--- a/templates/main.twig
+++ b/templates/main.twig
@@ -19,9 +19,9 @@
     <h2 id="location"><i class="fa-solid fa-location-pin"></i> Where</h2>
     <a href="https://ubc.zoom.us/j/68502794323?pwd=b205TE5xVFJSYTNRZ1U3Y21hS0crdz09">Zoom</a>
     <h2 id="time"><i class="fa-solid fa-calendar"></i> When</h2>
-    <p class="lead">Friday, January 28th, 2022<br/>9am &ndash; 5pm</p>
-    <p class="lead">Saturday, January 29th, 2022<br/>9am &ndash; 5pm</p>
-    <p class="lead">Sunday, January 30th, 2022<br/>Free-for-all</p>
+    <p class="lead">Friday, January 28<sup>th</sup>, 2022<br/>9am &ndash; 5pm</p>
+    <p class="lead">Saturday, January 29<sup>th</sup>, 2022<br/>9am &ndash; 5pm</p>
+    <p class="lead">Sunday, January 30<sup>th</sup>, 2022<br/>Free-for-all</p>
     <h2 id="thanks"><i class="fa-solid fa-hand-holding-heart"></i> Thanks</h2>
 <p>Thanks to UBC Computer Science department for hosting the Zoom.
     {#    <!-- <a href="https://thejibe.com/"><img src="https://thejibe.com/themes/quirky/ecommerce_agency.png" class="jibe-logo" /></a></p>
