--- a/sass/base/_code.scss
+++ b/sass/base/_code.scss
@@ -1,5 +1,4 @@
 
-
 code {
   background-color: rgba(0, 0, 0, 0.1);
   border-color: rgba(0, 0, 0, 0.25);
@@ -11,18 +10,19 @@ pre,
 samp {
   font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
 code {
-  padding: 2px 4px;
+  padding: .1rem .2rem;
   color: #c7254e;
   white-space: nowrap;
   background-color: #f9f2f4;
   border-radius: 0;
 }
+
 pre {
   display: block;
   padding: 10px;
-  margin: 0 0 10.5px;
-  line-height: 1.428571429;
+  margin: 0 0 1rem;
   color: #333333;
   word-break: break-all;
   word-wrap: break-word;
@@ -30,6 +30,7 @@ pre {
   border: 1px solid #cccccc;
   border-radius: 0;
 }
+
 pre code {
   padding: 0;
   font-size: inherit;
